--- a/WebJar-app/src/main/webapp/index.html
+++ b/WebJar-app/src/main/webapp/index.html
@@ -15,6 +15,9 @@
 	<script src="webjars/angular-resource/1.5.0/angular-resource.min.js"></script>
 	<script src="webjars/angular-ui-bootstrap/1.3.1/ui-bootstrap-tpls.min.js"></script>
 	<script src="webjars/angular-smart-table/2.1.8/dist/smart-table.min.js"></script>	
+	<script src="webjars/chartjs/2.7.2/Chart.min.js"></script>	
+	<script src="webjars/angular-chart.js/1.1.1/angular-chart.min.js"></script>	
+	
 </head>
 <body>
     <div ng-view ></div>
@@ -27,10 +30,13 @@
     <script type="text/javascript" src="js/directives/myDirectives.js"></script>
     <script type="text/javascript" src="js/directives/tableDirectives.js"></script>
     <script type="text/javascript" src="js/directives/hightableDirectives.js"></script>
+    <script type="text/javascript" src="js/directives/smartchartDirectives.js"></script>
     <script type="text/javascript" src="js/directives/smarttableDirectives.js"></script>
     <script type="text/javascript" src="js/directives/tableExample.js"></script>
     <script type="text/javascript" src="js/controllers/DateTimePickerController.js"></script>
     <script type="text/javascript" src="js/controllers/hello/hello-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/smartchart/smartchart-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/smartchartfinancial/smartchartfinancial-controller.js"></script>
     <script type="text/javascript" src="js/controllers/smarttable/smarttable-controller.js"></script>
     <script type="text/javascript" src="js/controllers/hightable/high-table-controller.js"></script>
     <script type="text/javascript" src="js/controllers/there/there-controller.js"></script>
