--- a/WebJar-app/src/main/webapp/index.html
+++ b/WebJar-app/src/main/webapp/index.html
@@ -53,6 +53,9 @@
     <script type="text/javascript" src="js/controllers/highstock/highstock-controller.js"></script>
     <script type="text/javascript" src="js/controllers/highstock/highstock-services.js"></script>
     <script type="text/javascript" src="js/controllers/highchartfinancial/highchartfinancial-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/reports/report-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/reports/report-services.js"></script>
+    <script type="text/javascript" src="js/controllers/highreport/highreport-controller.js"></script>
     <script type="text/javascript" src="js/controllers/highchartpie/highchartpie-controller.js"></script>
     <script type="text/javascript" src="js/controllers/hightable/high-table-controller.js"></script>
     <script type="text/javascript" src="js/controllers/there/there-controller.js"></script>
@@ -60,6 +63,9 @@
     <script type="text/javascript" src="js/controllers/demo/demo-services.js"></script>
     <script type="text/javascript" src="js/controllers/heroes/heroes-controller.js"></script>
     <script type="text/javascript" src="js/controllers/heroes/heroes-services.js"></script>
+ 
+ 
+ 
  
 </body>
 </html>
