--- a/WebJar-app/src/main/webapp/index.html
+++ b/WebJar-app/src/main/webapp/index.html
@@ -56,7 +56,10 @@
     <script type="text/javascript" src="js/controllers/reports/report-controller.js"></script>
     <script type="text/javascript" src="js/controllers/reports/report-services.js"></script>
     <script type="text/javascript" src="js/controllers/highreport/highreport-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/highchartcombo/highchartcombo-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/highchartcombo/highchartcombo-service.js"></script>
     <script type="text/javascript" src="js/controllers/highchartpie/highchartpie-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/highchartpie/highchartpie-service.js"></script>
     <script type="text/javascript" src="js/controllers/hightable/high-table-controller.js"></script>
     <script type="text/javascript" src="js/controllers/there/there-controller.js"></script>
     <script type="text/javascript" src="js/controllers/demo/demo-controller.js"></script>
