--- a/WebJar-app/src/main/webapp/index.html
+++ b/WebJar-app/src/main/webapp/index.html
@@ -9,7 +9,8 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-    
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
+
     <!--  Web jars go here -->
 	<script src="webjars/angular/1.5.0/angular.min.js"></script>
 	<script src="webjars/angular-route/1.5.0/angular-route.min.js"></script>
@@ -22,7 +23,9 @@
 	<script src="webjars/highcharts/6.1.0/modules/exporting.js"></script>	
 	<script src="https://highcharts.github.io/export-csv/export-csv.js"></script>
 	<script src="webjars/chartist/0.9.8/dist/chartist.min.js"></script>
-
+   	<script src="webjars/jquery/1.9.1/jquery.min.js"></script>
+   	<script src="webjars/raphaeljs/2.1.4/raphael-min.js"></script>
+   	<script src="webjars/morrisjs/0.5.1/morris.min.js"></script>
 <!-- 
 	<script src="webjars/highcharts/6.1.0/highcharts.js"></script>
  -->
@@ -56,6 +59,7 @@
     <script type="text/javascript" src="js/controllers/reports/report-controller.js"></script>
     <script type="text/javascript" src="js/controllers/reports/report-services.js"></script>
     <script type="text/javascript" src="js/controllers/highreport/highreport-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/morris/morris-controller.js"></script>
     <script type="text/javascript" src="js/controllers/highchartcombo/highchartcombo-controller.js"></script>
     <script type="text/javascript" src="js/controllers/highchartcombo/highchartcombo-service.js"></script>
     <script type="text/javascript" src="js/controllers/highchartpie/highchartpie-controller.js"></script>
