--- a/WebJar-app/src/main/webapp/index.html
+++ b/WebJar-app/src/main/webapp/index.html
@@ -26,6 +26,11 @@
    	<script src="webjars/jquery/1.9.1/jquery.min.js"></script>
    	<script src="webjars/raphaeljs/2.1.4/raphael-min.js"></script>
    	<script src="webjars/morrisjs/0.5.1/morris.min.js"></script>
+   	<script src="webjars/jquery-flot/0.8.3/jquery.flot.js"></script>
+   	<script src="webjars/flot/0.8.3/jquery.flot.categories.min.js"></script>
+   	<script src="webjars/flot/0.8.3/jquery.flot.pie.min.js"></script>
+   	<script src="webjars/flot/0.8.3/jquery.flot.resize.min.js"></script>
+   	
 <!-- 
 	<script src="webjars/highcharts/6.1.0/highcharts.js"></script>
  -->
@@ -45,6 +50,7 @@
     <script type="text/javascript" src="js/directives/hightableDirectives.js"></script>
     <script type="text/javascript" src="js/directives/smartchartDirectives.js"></script>
     <script type="text/javascript" src="js/directives/smarttableDirectives.js"></script>
+    <script type="text/javascript" src="js/directives/flotDirectives.js"></script>
     <script type="text/javascript" src="js/directives/tableExample.js"></script>
     <script type="text/javascript" src="js/controllers/DateTimePickerController.js"></script>
     <script type="text/javascript" src="js/controllers/hello/hello-controller.js"></script>
@@ -59,6 +65,7 @@
     <script type="text/javascript" src="js/controllers/reports/report-controller.js"></script>
     <script type="text/javascript" src="js/controllers/reports/report-services.js"></script>
     <script type="text/javascript" src="js/controllers/highreport/highreport-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/flot/flot-controller.js"></script>
     <script type="text/javascript" src="js/controllers/morris/morris-controller.js"></script>
     <script type="text/javascript" src="js/controllers/highchartcombo/highchartcombo-controller.js"></script>
     <script type="text/javascript" src="js/controllers/highchartcombo/highchartcombo-service.js"></script>
