--- a/WebJar-app/src/main/webapp/index.html
+++ b/WebJar-app/src/main/webapp/index.html
@@ -58,6 +58,9 @@
     <script type="text/javascript" src="js/controllers/smartchartpie/smartchartpie-controller.js"></script>
     <script type="text/javascript" src="js/controllers/smartchartfinancial/smartchartfinancial-controller.js"></script>
     <script type="text/javascript" src="js/controllers/smarttable/smarttable-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/smarttable/smarttable-service.js"></script>
+    <script type="text/javascript" src="js/controllers/smarttablercv/smarttablercv-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/smarttablercv/smarttablercv-service.js"></script>
     <script type="text/javascript" src="js/controllers/chartist/chartist-controller.js"></script>
     <script type="text/javascript" src="js/controllers/highstock/highstock-controller.js"></script>
     <script type="text/javascript" src="js/controllers/highstock/highstock-services.js"></script>
