--- a/WebJar-app/src/main/webapp/index.html
+++ b/WebJar-app/src/main/webapp/index.html
@@ -61,6 +61,8 @@
     <script type="text/javascript" src="js/controllers/smarttable/smarttable-service.js"></script>
     <script type="text/javascript" src="js/controllers/smarttablercv/smarttablercv-controller.js"></script>
     <script type="text/javascript" src="js/controllers/smarttablercv/smarttablercv-service.js"></script>
+    <script type="text/javascript" src="js/controllers/smarttablercvx/smarttablercvx-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/smarttablercvx/smarttablercvx-service.js"></script>
     <script type="text/javascript" src="js/controllers/chartist/chartist-controller.js"></script>
     <script type="text/javascript" src="js/controllers/highstock/highstock-controller.js"></script>
     <script type="text/javascript" src="js/controllers/highstock/highstock-services.js"></script>
