--- a/WebJar-app/src/main/webapp/index.html
+++ b/WebJar-app/src/main/webapp/index.html
@@ -12,10 +12,12 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
 
     <!--  Web jars go here -->
+   	<script src="webjars/jquery/3.1.1/jquery.min.js"></script>
+	<script src="webjars/bootstrap/3.3.7/dist/js/bootstrap.min.js"></script>
 	<script src="webjars/angular/1.5.0/angular.min.js"></script>
 	<script src="webjars/angular-route/1.5.0/angular-route.min.js"></script>
 	<script src="webjars/angular-resource/1.5.0/angular-resource.min.js"></script>
-	<script src="webjars/angular-ui-bootstrap/1.3.1/ui-bootstrap-tpls.min.js"></script>
+	<script src="webjars/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
 	<script src="webjars/angular-smart-table/2.1.8/dist/smart-table.min.js"></script>	
 	<script src="webjars/chartjs/2.7.2/Chart.min.js"></script>	
 	<script src="webjars/angular-chart.js/1.1.1/angular-chart.min.js"></script>	
@@ -23,7 +25,6 @@
 	<script src="webjars/highcharts/6.1.0/modules/exporting.js"></script>	
 	<script src="https://highcharts.github.io/export-csv/export-csv.js"></script>
 	<script src="webjars/chartist/0.9.8/dist/chartist.min.js"></script>
-   	<script src="webjars/jquery/1.9.1/jquery.min.js"></script>
    	<script src="webjars/raphaeljs/2.1.4/raphael-min.js"></script>
    	<script src="webjars/morrisjs/0.5.1/morris.min.js"></script>
    	<script src="webjars/jquery-flot/0.8.3/jquery.flot.js"></script>
@@ -43,6 +44,7 @@
     
     <script type="text/javascript" src="js/controllers/tasksControllers.js"></script>
     <script type="text/javascript" src="js/services/tasksFactories.js"></script>
+    <script type="text/javascript" src="js/services/app-services.js"></script>
     <script type="text/javascript" src="js/directives/w3TestDirective.js"></script>
     <script type="text/javascript" src="js/directives/myDirectives.js"></script>
     <script type="text/javascript" src="js/directives/tableDirectives.js"></script>
@@ -59,6 +61,8 @@
     <script type="text/javascript" src="js/controllers/smartchartfinancial/smartchartfinancial-controller.js"></script>
     <script type="text/javascript" src="js/controllers/smarttable/smarttable-controller.js"></script>
     <script type="text/javascript" src="js/controllers/smarttable/smarttable-service.js"></script>
+    <script type="text/javascript" src="js/controllers/sales/sales-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/sales/sales-service.js"></script>
     <script type="text/javascript" src="js/controllers/smarttablercv/smarttablercv-controller.js"></script>
     <script type="text/javascript" src="js/controllers/smarttablercv/smarttablercv-service.js"></script>
     <script type="text/javascript" src="js/controllers/smarttablercvx/smarttablercvx-controller.js"></script>
