--- a/WebJar-app/src/main/webapp/index.html
+++ b/WebJar-app/src/main/webapp/index.html
@@ -61,6 +61,8 @@
     <script type="text/javascript" src="js/controllers/smartchartfinancial/smartchartfinancial-controller.js"></script>
     <script type="text/javascript" src="js/controllers/smarttable/smarttable-controller.js"></script>
     <script type="text/javascript" src="js/controllers/smarttable/smarttable-service.js"></script>
+    <script type="text/javascript" src="js/controllers/fxcalc/fxcalc-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/fxcalc/fxcalc-service.js"></script>
     <script type="text/javascript" src="js/controllers/sales/sales-controller.js"></script>
     <script type="text/javascript" src="js/controllers/sales/sales-service.js"></script>
     <script type="text/javascript" src="js/controllers/smarttablercv/smarttablercv-controller.js"></script>
