--- a/WebJar-app/src/main/webapp/index.html
+++ b/WebJar-app/src/main/webapp/index.html
@@ -14,6 +14,7 @@
     <!--  Web jars go here -->
    	<script src="webjars/jquery/3.1.1/jquery.min.js"></script>
 	<script src="webjars/bootstrap/3.3.7/dist/js/bootstrap.min.js"></script>
+	<script src="webjars/momentjs/2.22.0/min/moment.min.js"></script>
 	<script src="webjars/angular/1.5.0/angular.min.js"></script>
 	<script src="webjars/angular-route/1.5.0/angular-route.min.js"></script>
 	<script src="webjars/angular-resource/1.5.0/angular-resource.min.js"></script>
