--- a/WebJar-app/src/main/webapp/index.html
+++ b/WebJar-app/src/main/webapp/index.html
@@ -60,6 +60,7 @@
     <script type="text/javascript" src="js/controllers/smartchart/smartchart-controller.js"></script>
     <script type="text/javascript" src="js/controllers/smartchartpie/smartchartpie-controller.js"></script>
     <script type="text/javascript" src="js/controllers/smartchartfinancial/smartchartfinancial-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/smartchartfinancialx/smartchartfinancialx-controller.js"></script>
     <script type="text/javascript" src="js/controllers/smarttable/smarttable-controller.js"></script>
     <script type="text/javascript" src="js/controllers/smarttable/smarttable-service.js"></script>
     <script type="text/javascript" src="js/controllers/cashtransaction/cashtransaction-controller.js"></script>
